<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.RegisterActivity"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_marginBottom="60dp"
        android:textColor="@color/mediumseagreen"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mediumseagreen"
            android:text="@string/username" />

        <EditText
            android:id="@+id/userNameE"
            android:layout_width="wrap_content"
            android:textColor="@color/mediumseagreen"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:hint="@string/usernameE"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mediumseagreen"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/passwordE"
            android:textColor="@color/mediumseagreen"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/mediumseagreen"
            android:text="@string/sex" />

        <RadioGroup
            android:id="@+id/radioGrop"
            android:layout_width="146dp"
            android:layout_height="31dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:textColor="@color/mediumseagreen"
            tools:ignore="InvalidId">

            <RadioButton
                android:id="@+id/radioBoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/boy" />

            <RadioButton
                android:id="@+id/radioGirl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/girl" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mediumseagreen"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="8"
            android:gravity="center"
            android:hint="@string/phoneE"
            android:inputType="phone"
            android:textColor="@color/mediumseagreen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mediumseagreen"
            android:text="@string/buttonRegister" />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mediumseagreen"
            android:text="@string/buttonCancel" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>